<resources>
    <string name="app_name">Movie List</string>
    <string name="action_settings">Settings</string>
    <string name="action_sort">sort</string>
    <string name="popularity">Popularity</string>
    <string name="user_ratings">User_ratings</string>
    <string name="myfavorites">My_favorites</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="label_popularity">Popularity:</string>
    <string name="text_movie">Large Text</string>
    <string name="author">Large Text</string>
    <string name="content">Medium Text</string>
    <string name="reviews">Reveiws</string>
    <string name="trailers">Trailers</string>
    <string name="release_date">Release Date: 12/16/2015</string>
    <string name="votes">1735</string>
    <string name="label_votes">Votes:</string>
    <string name="rating">Rating:</string>
    <string name="textpopularity">55.45</string>
    <string name="synopsis">Synopsis</string>
    <string name="dlg_user_ratings">User Ratings</string>
    <string name="dlg_favorites">My Favorites</string>
</resources>
