<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="54dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/radioButtonPopularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/popularity" />

        <RadioButton
            android:id="@+id/radioButtonUserRatings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/dlg_user_ratings" />

        <RadioButton
            android:id="@+id/radioButtonMyFavorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/dlg_favorites" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup"
        android:layout_alignStart="@+id/radioGroup"
        android:layout_below="@+id/radioGroup"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/ok" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonOk"
        android:layout_toEndOf="@+id/buttonOk"
        android:layout_toRightOf="@+id/buttonOk"
        android:text="@string/cancel" />


</RelativeLayout>