<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollviewDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/relativeMovieDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/female_film" />

        <TextView
            android:id="@+id/labelPopularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imageViewDetail"
            android:layout_toEndOf="@+id/imageViewDetail"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/label_popularity"/>

        <TextView
            android:id="@+id/textViewPopularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/labelPopularity"
            android:layout_toEndOf="@+id/labelPopularity"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/textpopularity"/>

        <TextView
            android:id="@+id/labelRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelPopularity"
            android:layout_toRightOf="@+id/imageViewDetail"
            android:layout_toEndOf="@+id/imageViewDetail"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/rating"/>

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewPopularity"
            android:layout_toRightOf="@+id/labelRating"
            android:layout_toEndOf="@+id/labelRating"
            android:layout_alignBottom="@+id/labelRating"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="0"
            android:stepSize="0"
            style="?android:attr/ratingBarStyleSmall"/>

        <TextView
            android:id="@+id/labelVotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelRating"
            android:layout_toRightOf="@+id/imageViewDetail"
            android:layout_toEndOf="@+id/imageViewDetail"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/label_votes"/>

        <TextView
            android:id="@+id/textViewVotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ratingBar"
            android:layout_toRightOf="@+id/labelVotes"
            android:layout_toEndOf="@+id/labelVotes"
            android:layout_alignBaseline="@+id/labelVotes"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/votes"/>

        <TextView
            android:id="@+id/textViewMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageViewDetail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/text_movie"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <TextView
            android:id="@+id/textViewReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewMovie"
            android:layout_centerHorizontal="true"
            android:text="@string/release_date"
            android:textAppearance="?android:attr/textAppearanceSmall" />


        <TextView
            android:id="@+id/labelSynopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewReleaseDate"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/synopsis"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textViewSynopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelSynopsis"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/synopsis"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/trailers"
            android:id="@+id/textViewTrailers"
            android:layout_below="@+id/textViewSynopsis"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/videoRecyclerList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewTrailers"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            ></android.support.v7.widget.RecyclerView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/reviews"
            android:id="@+id/textViewReviews"
            android:layout_below="@+id/videoRecyclerList"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/reveiwRecyclerList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewReviews"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            ></android.support.v7.widget.RecyclerView>


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButtonFavorite"
            android:layout_above="@+id/ratingBar"
            android:layout_alignRight="@+id/videoRecyclerList"
            android:layout_alignEnd="@+id/videoRecyclerList"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_favorite_border_black_24dp"/>

    </RelativeLayout>


</ScrollView>